# factory

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  dataset-dl.txt  hermes_conversation_20260415_093146.json  hermes_conversation_20260415_093151.json  jobs.json
agents/ig88/: .claudeignore  .gitignore  .goosehints  .mcp.json  CLAUDE.md  README.md  funding_deep.py  harden_atr_expanded.py  live_scan.py  manifest.json  pyproject.toml  session_analysis.py  validate_momentum_breakout.py
agents/ig88/config/: trading.yaml
agents/ig88/docs/: ig88_edge_report_v5.md
agents/ig88/execute-code-troubleshooting/: SKILL.md
agents/ig88/reports/: WALK_FORWARD_VALIDATION_SUMMARY.md  drift_protocol_analysis.md  keltner_breakout_screen_20260415.md  short_max_hold_results.md
agents/ig88/scripts/: README.md  aggressive_monte_carlo.py  aggressive_scanner.py  aggressive_sizing.py  aggressive_v3.py  aggressive_wf.py  allocator_scan.py  analyze_liquidity.py  annualized_portfolio.py  anomaly_arb.py  anomaly_arb_2026.py  asset_optimization.py  atr4h_paper_trader.py  atr4h_paper_trader_v9.py  atr_hardening.py  atr_leverage_backtest.py  atr_new_assets_backtest.py  atr_new_assets_leverage.py  atr_paper_trader.py  atr_paper_trader_v2.py  atr_paper_trader_v3.py  atr_paper_trader_v4.py  atr_paper_trader_v5.py  (+228 more)
coordinator/: Cargo.toml  README.md
coordinator/src/: agent.rs  approval.rs  budget.rs  config.rs  coordinator.rs  delegate.rs  health.rs  hermes_adapter.rs  identity_store.rs  infra.rs  lifecycle.rs  loop_engine.rs  main.rs  matrix.rs  matrix_legacy.rs  matrix_native.rs  memory.rs  profile_export.rs  provider_chain.rs  run_events.rs  runtime_state.rs  task_lease.rs  timer.rs
(+1150 files in other folders)
