[package]
name = "coordinator-rs"
version = "0.1.0"
edition = "2021"
description = "IG-88 Matrix Coordinator — Rust port of matrix-coordinator.ts"

[[bin]]
name = "coordinator-rs"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
serde_yaml     = "0.9"
hmac           = "0.12"
sha2           = "0.10"
notify         = "6"
chrono         = { version = "0.4", features = ["serde"] }
chrono-tz      = "0.10"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow         = "1"
tokio-util     = { version = "0.7", features = ["codec"] }
futures        = "0.3"
regex          = "1"
hex            = "0.4"
rand           = "0.8"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
base64         = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
