[tool.poetry]
name = "ig88-quant"
version = "0.1.0"
description = "Quantitative analysis toolkit for IG-88 crypto scalper"
authors = ["Chris Lyons"]
readme = "README.md"
packages = [{include = "quant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2"
pyarrow = "^18.0"
numpy = "^2.1"
scipy = "^1.14"
scikit-learn = "^1.6"
matplotlib = "^3.9"
seaborn = "^0.13"
statsmodels = "^0.14"
arch = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
